samples/_failures_safe/1761163923_598411_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea88753d.c: In function ‘display_recent_logs’:
./samples/SAFE/__tmp_ea88753d.c:133:16: error: missing terminating " character
  133 |         printf("[%s] %s: %s
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_ea88753d.c:133:9: error: expected expression at end of input
  133 |         printf("[%s] %s: %s
      |         ^~~~~~
./samples/SAFE/__tmp_ea88753d.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea88753d.c:133:9: error: expected declaration or statement at end of input
